--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#ffffff",
     "icons": [
         {
-            "src": "/favicon.ico",
+            "src": "favicon.ico",
             "sizes": "48x48 72x72 96x96 128x128 192x192 256x256 512x512",
             "type": "image/vnd.microsoft.icon",
             "purpose": "any maskable"
